@@ -107,6 +107,7 @@ Uspenskiy Andrey <duspen@yandex.ua>
 
 Jameson Rollins <jrollins@finestructure.net>
         elvi: ads
+        plus tweaks.
 
 THANKS TO
 
