@@ -1,3 +1,7 @@
+2010-08-22  Jameson Rollins <jrollins@finestructure.net>
+
+	* surfraw.IN: Improve listing of elvi.
+
 2010-08-20  James Rowe  <jnrowe@gmail.com>
 
 	* new elvi: ads.  Thanks to Jameson Rollins.
